// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNumber should click on center button 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="10"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should click on min button 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 25px;"
        type="number"
        value="8"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should click on plus button with a step value 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="30"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should click on plus button with a step value and an in-between value set 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="30"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should focus input and modify value 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="10"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should focus input and modify value onMaxCrossed 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-asskgt-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.cache-asskgt-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 45px;"
        type="number"
        value="100"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-asskgt-StyledSelectButton ermgxlz4"
      disabled=""
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should focus input and modify value onMinCrossed 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-asskgt-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.cache-asskgt-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-asskgt-StyledSelectButton ermgxlz4"
      disabled=""
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="10"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should increase and decrease input with arrow up and down 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-asskgt-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.cache-asskgt-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 45px;"
        type="number"
        value="30"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-asskgt-StyledSelectButton ermgxlz4"
      disabled=""
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should renders correctly 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1qlmcqr-StyledText {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="10"
      />
      <span
        class="cache-1qlmcqr-StyledText ermgxlz1"
      >
        unit
      </span>
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-sp4bvy-StyledContainer-StyledContainer {
  background-color: #f6f6f8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-sp4bvy-StyledContainer-StyledContainer>.ermgxlz4,
.cache-sp4bvy-StyledContainer-StyledContainer .ermgxlz2,
.cache-sp4bvy-StyledContainer-StyledContainer .ermgxlz3 {
  background-color: #f6f6f8;
  border: none;
  color: #c4c9d6;
  opacity: 1;
  cursor: not-allowed;
}

.cache-asskgt-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.cache-asskgt-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1uero4z-StyledText {
  color: #c4c9d6;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
    class="cache-sp4bvy-StyledContainer-StyledContainer ermgxlz0"
    disabled=""
  >
    <button
      aria-label="Minus"
      class="cache-asskgt-StyledSelectButton ermgxlz4"
      disabled=""
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        disabled=""
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="10"
      />
      <span
        class="cache-1uero4z-StyledText ermgxlz1"
      >
        unit
      </span>
    </div>
    <button
      aria-label="Plus"
      class="cache-asskgt-StyledSelectButton ermgxlz4"
      disabled=""
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should renders correctly max value 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1qlmcqr-StyledText {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-asskgt-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.cache-asskgt-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 45px;"
        type="number"
        value="100"
      />
      <span
        class="cache-1qlmcqr-StyledText ermgxlz1"
      >
        unit
      </span>
    </div>
    <button
      aria-label="Plus"
      class="cache-asskgt-StyledSelectButton ermgxlz4"
      disabled=""
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should renders correctly min value 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-asskgt-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.cache-asskgt-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1qlmcqr-StyledText {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-asskgt-StyledSelectButton ermgxlz4"
      disabled=""
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 25px;"
        type="number"
        value="0"
      />
      <span
        class="cache-1qlmcqr-StyledText ermgxlz1"
      >
        unit
      </span>
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should renders large size 1`] = `
<DocumentFragment>
  .cache-mnp5vr-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-oodroo-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-pvag7g-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-pvag7g-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-pvag7g-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
    class="cache-mnp5vr-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-pvag7g-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="10"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-oodroo-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SelectNumber should renders small size 1`] = `
<DocumentFragment>
  .cache-gim4of-StyledContainer {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 32px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1h5w6a8-StyledSelectButton {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.cache-1h5w6a8-StyledSelectButton:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-lii5tu-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.cache-1j8mamr-StyledCenterBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-1j8mamr-StyledCenterBox:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1j8mamr-StyledCenterBox:focus-within:not([disabled]) {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.cache-kk0u3u-StyledInput {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-kk0u3u-StyledInput::-webkit-outer-spin-button,
.cache-kk0u3u-StyledInput::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
    class="cache-gim4of-StyledContainer ermgxlz0"
  >
    <button
      aria-label="Minus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-lii5tu-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-1j8mamr-StyledCenterBox ermgxlz3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-kk0u3u-StyledInput ermgxlz2"
        name="selectnumber"
        style="width: 35px;"
        type="number"
        value="10"
      />
    </div>
    <button
      aria-label="Plus"
      class="cache-1h5w6a8-StyledSelectButton ermgxlz4"
      type="button"
    >
      <svg
        class="cache-lii5tu-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
